Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b70d604a012d7490bde47b

--- a/mlflow_external_access/access_mlflow_externally.ipynb
+++ b/mlflow_external_access/access_mlflow_externally.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ebc91075-c1df-4eb2-b8f5-ed32886c7f60",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c5d30798-07bc-4c89-b0a6-0fa6ba47f5b2",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1028f667-66a0-4a74-a99e-1a7cdaa10a88",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3a511660-ba4b-4a39-93b2-c786153c2353",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "95bed830-ee90-41c7-ad58-ba8d2908b394",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2eb8e5da-30fc-42ff-be25-8c3168e5891a",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4718b3b7-81e8-48ac-9fcd-de544f660c2b",
    "metadata": {},
    "outputs": [],
@@ -213,10 +213,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "794ef336-f748-4b08-95fe-c6a74c14255f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://marcdo77364.cs.domino.tech/account/68ac9b59ea374e2b81c48d75/regenerateApiKey\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/urllib3/connectionpool.py:1063: InsecureRequestWarning: Unverified HTTPS request is being made to host 'marcdo77364.cs.domino.tech'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "## We first configure the MLFLOW_TRACKING_URI. Get your own\n",
     "external_mlflow_tracking_uri=\"https://marcdo77364.cs.domino.tech\"\n",
@@ -228,22 +244,30 @@
     "sa_id=decoded['payload']['sub']\n",
     "api_key = regenerate_api_key_for_sa(external_mlflow_tracking_uri,sa_id,sa_token)\n",
     "os.environ['DOMINO_USER_API_KEY']=api_key[\"raw\"]\n",
-    "print(os.environ['DOMINO_USER_API_KEY'])\n",
+    "#print(os.environ['DOMINO_USER_API_KEY'])\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "424b624e-3092-406a-855e-4534f4bd1ec7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68d11f8b70666558869fbe36\n"
+     ]
+    }
+   ],
    "source": [
     "domino = Domino(\"wadkars/ddl-end-to-end-demo\",auth_token=get_oauth_token())\n",
     "compute_env_id = get_environment_id('Domino Standard Environment Py3.10 R4.4')['id']\n",
     "title = f\"External MLFLOW simulation for {os.environ['DOMINO_STARTING_USERNAME']}\"\n",
-    "j = domino.job_start(title=title,command=\"/tmp/ls\",\n",
+    "j = domino.job_start(title=title,command=\"ls\",\n",
     "                 hardware_tier_name=\"Small\",environment_id=compute_env_id)\n",
     "os.environ['DOMINO_RUN_ID']=j['id']\n",
     "print(os.environ['DOMINO_RUN_ID'])"
@@ -251,10 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f75d0550-2b35-44db-8d01-6b6f8a0d2ea8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run-id68d11f8b70666558869fbe36\n"
+     ]
+    }
+   ],
    "source": [
     "_request_header_provider_registry._registry.clear() #This clears any existing values\n",
     "set_mlflow_tracking_uri()\n",
@@ -264,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2307cea5-cdec-4b6f-8ef4-7852b52f6e85",
    "metadata": {},
    "outputs": [],
@@ -300,10 +332,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b296a6c8-363e-488c-9c03-0a27ea8fd7fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/mlflow/store/artifact/utils/models.py:31: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "  latest = client.get_latest_versions(name, None if stage is None else [stage])\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c8c603a36910406780442f33be344e91",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         0         1         2         3         4         5         6   \\\n",
+      "0  0.846673  0.879018  0.968722  0.651201  0.314279  0.749779  0.254828   \n",
+      "\n",
+      "        7         8         9   ...        20        21        22        23  \\\n",
+      "0  0.16293  0.353965  0.281197  ...  0.288764  0.052849  0.745046  0.817983   \n",
+      "\n",
+      "         24        25        26        27        28        29  \n",
+      "0  0.780735  0.461245  0.455579  0.567219  0.464284  0.034065  \n",
+      "\n",
+      "[1 rows x 30 columns]\n",
+      "PyFunc preds: [1]\n"
+     ]
+    }
+   ],
    "source": [
     "my_name = os.environ['DOMINO_STARTING_USERNAME']\n",
     "exp_model_name = f\"xgb-demo-{my_name}\"\n",
