--- a/service_accounts/service_accounts_mgmt.ipynb
+++ b/service_accounts/service_accounts_mgmt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7de67838-edce-4536-98f1-16c8bb4a1992",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cbc3ceb0-b430-41a1-99cf-5eee2d3ce001",
    "metadata": {},
    "outputs": [],
@@ -559,6 +559,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "be5bb3fd-9c2f-4abf-bb04-0ed068bdc871",
+   "metadata": {},
+   "source": [
+    "## Recap\n",
+    "\n",
+    "A service account can be described as follows ![Service Account Static Design](../assets/ServiceAccountStatic.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ca156d0f-fcff-473d-824b-23b8fae7add3",
@@ -570,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9d82f1d0-6ac5-44ef-98e1-76db5ccc5665",
    "metadata": {},
    "outputs": [],
@@ -600,9 +610,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3709329-b7c4-418d-9096-f4b2dad07ee6",
+   "id": "99f2dfc3-85c4-47c9-a445-52075bec5277",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "compute_env_id = get_environment_id('Domino Standard Environment Py3.10 R4.4')['id']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e3709329-b7c4-418d-9096-f4b2dad07ee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'number': 65, 'id': '68d11d8770666558869fbe2b', 'queuedJobHistoryDetails': {'expectedWait': '', 'explanation': 'Your run has been put in a queue for processing.', 'helpText': \"In a few seconds, Domino will start the process of assigning your run to a machine. If the status doesn't change within a minute, please contact your admin team.\"}, 'stageTime': {'submissionTime': 1758535047802}, 'tags': [], 'jobRunCommand': \"ls '/tmp'\", 'usage': None, 'startedBy': {'id': '68b9efbcef0f2d1f1e95fde4', 'username': 'svc-user-ds-u3'}, 'commentsCount': 0, 'title': 'Test Job for SVC Account', 'projectId': '68b08bbfdc77613e66e6364e', 'commitDetails': {'inputCommitId': 'e31e3a85bf6f26f75008aa1630f007407d86e5fa'}, 'dominoStats': [], 'statuses': {'isCompleted': False, 'isArchived': False, 'isScheduled': False, 'executionStatus': 'Queued'}, 'mainRepoGitRef': {'type': 'head'}, 'dependentRepositories': [{'id': '68b08bc0dc77613e66e6364f', 'name': 'ddl-end-to-end-demo', 'uri': 'https://github.com/dominodatalab/ddl-end-to-end-demo.git', 'ref': '(Default branch)', 'serviceProvider': 'github'}], 'dependentDatasetMounts': [], 'dependentProjects': [], 'suggestDatasets': False, 'goalIds': [], 'runLauncherId': None, 'dependentExternalVolumeMounts': [], 'computeCluster': None, 'dataPlane': {'id': '000000000000000000000000', 'name': 'Local', 'namespace': 'domino-compute', 'isLocal': True, 'configuration': {}, 'status': {'state': 'Healthy', 'message': '', 'version': '4.1.1-7', 'lastHeartbeatTimestamp': 1758534988260, 'requiresUpgrade': False}, 'isHealthy': True, 'isArchived': False, 'isFileSyncDisabled': False}, 'snapshotDatasetsOnCompletion': False, 'workflowDetails': None, 'abnormalStatus': None}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from domino import Domino\n",
@@ -610,10 +639,13 @@
     "import requests\n",
     "\n",
     "svc_token=os.environ['SVC_ACCOUNT_TOKEN']\n",
-    "domino = Domino(\"wadkars/ddl-end-to-end-demo\",auth_token=svc_token)\n",
-    "compute_env_id = get_environment_id('Domino Standard Environment Py3.10 R4.4')['id']\n",
+    "\n",
+    "\n",
+    "#_class_ Domino(project, api_key=None, host=None, domino_token_file=None, auth_token=None)\n",
+    "host = \"https://marcdo77364.cs.domino.tech/\" #Change accordingly\n",
+    "domino = Domino(\"wadkars/ddl-end-to-end-demo\",auth_token=svc_token,host=host)\n",
     "title = f\"Test Job for SVC Account\"\n",
-    "j = domino.job_start(title=title,command=\"/tmp/ls\",\n",
+    "j = domino.job_start(title=title,command=\"ls /tmp\",\n",
     "                 hardware_tier_name=\"Small\",environment_id=compute_env_id)\n",
     "print(j)"
    ]
@@ -621,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44ac8e45-aaf1-4be5-9be8-9671cb5b33e9",
+   "id": "9b068dc4-237e-4660-ba66-b36dc18de735",
    "metadata": {},
    "outputs": [],
    "source": []
